# tr-data-getter

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data_getter/: __init__.py  savers.py  schemas.py
data_getter/getters/: __init__.py  bitmap.py  factory.py  getter.py
